# utray

./: Cargo.toml  LICENSE
crates/utray/: Cargo.toml
crates/utray-cli/: Cargo.toml
crates/utray-cli/src/: cli.rs  main.rs
crates/utray/src/: lib.rs  sni.rs
