[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["SuniRein <sunirein@qq.com>"]
license = "MIT"
repository = "https://github.com/SuniRein/utray"

[workspace.dependencies]
async-trait = "0.1.89"
rootcause = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
