[package]
name = "utray-cli"
description = "A command-line tool to interact with system tray."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
utray = { path = "../utray" }
tokio = { workspace = true }
