[package]
name = "utray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
